# VideoTranscriptAPI

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONCURRENT_IMPROVEMENTS.md  LICENSE  MIGRATION_READY.md  Makefile  Project_README.md  README.md  TODOS.md  config.example.json  main.py  pyproject.toml  requirements-backup.txt  requirements.txt  项目需求.md
.devcontainer/: devcontainer.json
.github/workflows/: gate.yml
BBDown/: BBDown_README.md
config/: config.example.json  config.example.jsonc  users.example.json
docker/: Dockerfile  deploy_targets.json  docker-compose.deploy.yml  docker-compose.image-override.yml  docker-compose.yml  ops.env.example  pull_and_deploy.sh  push_to_ghcr.sh
docs/: README.md  architecture.md  项目需求.md
docs/API_resp/: resp_bili_fetch_one_video.json  resp_bili_fetch_video_playurl.json  resp_xiaohongshu_get_note_info_v3.json  resp_youtube_get_video_info.json
docs/api/: bbdown.md  temp.js  企业微信机器人.md  企微通知-异步模式说明.md  企微通知器-USAGE_GUIDE.md
docs/architecture/: multi_user_setup.md
docs/cc_history/: 2025-07-30-caveat-the-messages-below-were-generated-by-the-u.txt  2025-08-20-修改 web 链接通知发送时机.txt  2025-08-20-增加超长文本取消发送企微校对文本的功能.txt  2025-08-20-尝试增加llm分段处理.txt  2025-08-20-添加 web页面，整合校对结果和原始转录文本，通过一个链接就分享出去更方便.txt
docs/designs/: media-resolver-integration.md
docs/development/: 2025-11-17-LLM并发与流程说明.md  GENERIC_URL_FEATURE.md  RAW_EXPORT_GUIDE.md  URL_DEDUPLICATION.md  WEB_VIEW_GUIDE.md  architecture_optimization_completed_phase2.md  bilibili_metadata_enhancement.md  funasr_long_queue_client.md  json_output_mode_guide.md  json_schema_upgrade_plan.md  module_migration_plan.md  module_migration_summary.md  risk_control_guide.md  source_url_to_download_url_refactoring.md
docs/examples/: ref_prompt.txt
docs/features/: chapters.md  floating_toc_pin_enhancement.md  processing_options.md  source_url_and_metadata_override.md
docs/funasr_spk_server/: funasr客户端交互指南.md
docs/guides/: media_resolver.md  multi_user_setup.md  notification.md
docs/plans/: 2026-07-15-pr3-review-retrospective.md  2026-07-16-chapter-outline-design.md
docs/参考文档/: LLM最佳实践.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  graph.html  graph.json
sample_files/funasr_spk_server/: 20250730_142929_server_test_spk_extract.json  (+1 more)
scripts/: __init__.py  aggregate_recommendations.py  cleanup_cache.py  execute_migration.py  execute_migration.sh  extract_recommendations.workflow.js  fetch_xiaoyuzhou_episodes.py  llm_test.py  migrate_cache_data.py  migrate_imports.py  rollback_imports.py  rollback_migration.sh  rollback_migration_full.py  run_tests.py  test_url.py  validate_migration.py
skill/: README.md  SKILL.md
tests/: README.md  conftest.py  test_concurrent.py  test_downloader.py  test_llm_speaker_inference.py  test_metadata_lookup.py  test_metadata_override.py  test_simplified_wechat_logic.py  test_transcriber.py  test_view_token_fix.py  test_wechat_notification.py
(+443 files in other folders)
