[project]
name = "video-transcript-api"
version = "0.1.0"
description = "基于Python的视频转录API服务，支持从多个平台下载视频并转录为文字"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.8.5",
    "beautifulsoup4>=4.9.0",
    "commentjson>=0.9.0",
    "fastapi==0.101.1",
    "ffmpeg-python>=0.2.0",
    "jinja2>=3.0.0",
    "keyboard==0.13.5",
    "loguru==0.7.0",
    "markdown>=3.4.0",
    "numpy==1.24.3",
    "propcache==0.3.1",
    "pyclip>=0.7.0",
    "pydantic==2.1.1",
    "pydub==0.25.1",
    "pymdown-extensions>=10.0.0",
    "pypinyin>=0.55.0",
    "pytest==7.4.0",
    "python-multipart==0.0.6",
    "requests>=2.32.2",
    "rich>=10.0.0",
    "sounddevice>=0.5.3",
    "srt>=3.5.3",
    "typer==0.9.0",
    "uvicorn==0.23.2",
    "watchdog>=6.0.0",
    "websocket-client==1.5.1",
    "websockets>=13.0",
    "wecom-notifier>=0.2.3",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp[default]>=2025.12.8",
]
