[project]
name = "video-transcript-api"
version = "0.1.0"
description = "基于Python的视频转录API服务，支持从多个平台下载视频并转录为文字"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.8.5",
    "beautifulsoup4>=4.9.0",
    "commentjson>=0.9.0",
    "fastapi>=0.115.0",
    "ffmpeg-python>=0.2.0",
    "jinja2>=3.0.0",
    "keyboard==0.13.5",
    "llm-compat",
    "loguru==0.7.0",
    "markdown>=3.4.0",
    "nh3>=0.2.0",
    "numpy==1.24.3",
    "propcache==0.3.1",
    "pyclip>=0.7.0",
    "pydantic>=2.1.1",
    "pydub==0.25.1",
    "pymdown-extensions>=10.0.0",
    "pypinyin>=0.55.0",
    "python-multipart>=0.0.6",
    "requests>=2.32.2",
    "rich>=10.0.0",
    "sounddevice>=0.5.3",
    "srt>=3.5.3",
    "typer==0.9.0",
    "uvicorn>=0.29.0",
    "watchdog>=6.0.0",
    "websocket-client==1.5.1",
    "websockets>=13.0",
    "wecom-notifier>=0.3.1",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp[default]>=2025.12.8",
    "zlx-ops-sdk>=0.1,<0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude manual/ and performance/ from auto-discovery
norecursedirs = ["manual", "performance", ".git", "__pycache__", "data"]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may require services)",
    "slow: Slow tests (network, large data)",
]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["src/video_transcript_api"]
omit = [
    "*/tests/*",
    "*/manual/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]

[tool.uv.sources]
llm-compat = { git = "https://github.com/zj1123581321/llm-compat.git" }
